# 267-pma-project

./: .gitignore  CMakeLists.txt  adjToIns.cpp  build_big_dist_pcsr.sh  build_dist_pcsr.sh  build_pcsr.sh  build_setpma.sh  build_setpma_big.sh  diff-log.txt  dist_pcsr.hpp  distr_pcsr.hpp  hash_map.hpp  job-perlmutter-starter  kmer_hash.cpp  log.txt  main.cpp  main_big_dist_pscr.cpp  main_count_duplicates.cpp  main_dist_pcsr.cpp  main_pcsr.cpp  main_setpma.cpp  main_small_dist_pcsr.cpp  modules.sh  rmat.cpp  set_pma.hpp  strong_scale_1_node.sh  strong_scale_inter_node.sh  weak_scale_1_node.sh
src/data-structures/: dist_pcsr.hpp  dist_pcsr2.hpp  graph.hpp  pcsr.hpp  set_graph.hpp  set_pma.hpp  utils.hpp
src/main/: main_dist_pcsr.cpp  main_setpma.cpp
tests/: dist_pcsr_bfs_outserts.txt  dist_pcsr_bfs_solution.txt  dist_pcsr_inserts.txt  dist_pcsr_inserts2.txt  dist_pcsr_inserts_speed_1.txt  dist_pcsr_inserts_speed_2.txt  dist_pcsr_inserts_speed_4.txt  dist_pcsr_inserts_speed_8.txt  dist_pcsr_outserts.txt  dist_pcsr_pr_outserts.txt  dist_pcsr_pr_solution.txt  dist_pcsr_solution.txt  dist_pcsr_solution2.txt  pcsr_benchmark_inserts.txt  pcsr_benchmark_outserts.txt  pcsr_benchmark_solution.txt  pcsr_inserts_2.txt  pcsr_solution_2.txt  setpma_benchmark_inserts.txt  setpma_benchmark_solution.txt  sorted_dist_pcsr_solution.txt
